# mlops-aws-demo

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mlflow  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/: alb.tf  ecs_fargate.tf  iam.tf  main.tf  networking.tf  provider.tf  route53.tf  security_groups.tf  variables.tf
src/backend/: main.py
src/backend/baml_src/: clients.baml  inference.baml  main.baml  titanic.baml
src/backend/models/: __init__.py  base.py  factory.py  registry.py  titanic.py
src/frontend/: app.py
tests/: test_backend_root.py
