[project]
name = "mlops-aws-demo"
version = "0.1.0"
description = "ml/llm ops interactive demo"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    {include-group = "backend"},
    {include-group = "frontend"},
    {include-group = "test"}
]
backend = [
    "fastapi>=0.121.2",
    "mlflow>=3.6.0",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]
frontend = [
    "streamlit>=1.51.0",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

# TODO: read docs and learn why this fixed my issue
[tool.uv]
package = true
