[project]
name = "mlops-aws-demo"
version = "0.1.0"
description = "ml/llm ops interactive demo"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    {include-group = "backend"},
    {include-group = "frontend"},
    {include-group = "test"},
]
backend = [
    "baml-py>=0.213.0",
    "fastapi>=0.121.2",
    "mlflow>=3.6.0",
    "onnxruntime>=1.23.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skl2onnx>=1.19.1",
    "uvicorn>=0.38.0",
]
frontend = [
    "streamlit>=1.51.0",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]

# TODO: read docs and learn why this fixed my issue
[tool.uv]
package = true
